assets/css/shared.css
@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Montserrat:300,400,500,600,700&display=swap");

:root {
  --primary-color: #000;
  --secondary-color: #4161d3;
  --accent-color: #EB3678;
  --text-light-color: #fff;
  --text-dark-color: #454545;
  --text-blue-color: #4F75FF;
  --dark-bg-color: #0201017a;
  --light-bg-color: #F5F5F5;

  --hover-light-text: rgba(255, 255, 255, 0.8);
  --hover-primary-btn-bg: #eb3678cf;
  --hover-secondary-btn-bg: #2E4BB8;
}


body {
  font-family: "avenir";
  font-size: 16px;
  background-color: var(--primary-color);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Avenir";
  font-weight: 600;
  margin-bottom: 12px;
}

p {
  font-size: 16px;
  font-weight: 400;
  margin-bottom: 0;
  color: var(--text-light-color);
}

h1 {
  font-size: 78px;
  letter-spacing: -2px;
  background-image: linear-gradient(to right, #6439FF, #4F75FF, #00CCDD, #7CF5FF);
  color: transparent;
  background-clip: text;
}

h2 {
  font-size: 50px;
  color: #fff;
  letter-spacing: -2px;
}

h3 {
  font-size: 40px;
  color: var(--text-light-color);
  letter-spacing: -3px;
}

h4 {
  font-size: 30px;
  color: var(--text-light-color);
}

h5 {
  font-size: 22px;
  color: var(--text-blue-color);
}

h6 {
  font-size: 20px;
  color: var(--text-light-color);
}

.secondary-color {
  color: var(--text-blue-color);
}

@media (max-width: 575px) {
  h1, h2, h3, h4, h5, h6 {
    letter-spacing: normal;
  }
  
  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 26px;
  }

  h3 {
    font-size: 24px;
  }

  h4 {
    font-size: 22px;
  }

  h5 {
    font-size: 20px;
  }

  h6 {
    font-size: 18px;
  }
  .cta-button {
    width: 100%;
    padding: 12px;
    font-size: 0.95rem;
  }
}

.section {
  padding: 120px 0;
  overflow: hidden;
}

.container {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.site-hero {
  position: relative;
  height: 100vh;
  display: flex;
  flex-flow: row;
  align-items: center;
  text-align: center;
}

.site-hero-content {
  margin-bottom: 50px;
  margin-top: 70px;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(3, auto);
  gap: 10px;
  width: 90%;
  margin: 0 auto;
  align-items: center;
}

.grid-item {
  color: white;
  padding: 20px;
}

.uppercase {
  text-transform: uppercase;
}

.mt-lg {
  margin-top: 50px;
}

.mb-lg {
  margin-bottom: 50px;
}

.pt-lg {
  padding-top: 50px;
}

.pb-lg {
  padding-bottom: 50px;
}

.section-title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 56px;
  text-align: center;
}

@media (max-width: 991px) {
  .section-title h2 {
    font-size: 40px;
  }
}


.light-bg {
  width: 100%;
  padding-bottom: 50px;
  padding-top: 50px;
  background-color: var(--light-bg-color);
}

.light-font {
  font-weight: 400;
}

.center {
  justify-items: center;
  text-align: center;
}

.btn {
  font-family: "Avenir";
  border: none;
  margin: 6px 6px;
  padding: 10px 15px;
  border-radius: 3px;
  width: fit-content;
}

.btn:focus {
  box-shadow: none;
}

@media (max-width: 991px) {
  .btn {
    padding: 17px 40px;
  }
}

.btn .btn-area {
  display: block;
  overflow: hidden;
}

.btn .btn-area span {
  position: relative;
  display: block;
  padding: 2px 0;
}

.btn .btn-area span::after {
  content: attr(data-text);
  position: absolute;
  top: 150%;
  left: 0;
}

.btn-secondary {
  background: var(--secondary-color);
  color: #fff;
  font-weight: 500;
  padding: 15px 25px;
  min-width: 200px;
}

.CTA {
  background: var(--accent-color);
  color: #fff;
  font-weight: 500;
  padding: 15px 30px;
  min-width: 150px;
  color: #fff !important;
  border-radius: 3px;
}

.CTA:hover {
  background-color: var(--hover-primary-btn-bg);
  color: #fff !important;
}

@media (max-width: 991.98px) {
  .CTA {
    display: none;
  }
}

.btn-secondary:hover {
  background-color: var(--hover-secondary-btn-bg);
}

.cta-button {
  background-color: white;
  color: #1d4ed8;
  padding: 15px 30px;
  font-size: 1rem;
  font-weight: bold;
  border-radius: 25px;
  text-decoration: none;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s ease, background 0.3s ease;
}

.cta-button:hover {
  background-color: #e0e7ff;
  transform: scale(1.05);
}

@media (max-width: 991px) {
  .section-title {
    text-align: center;
  }

  .grid-container {
    grid-template-columns: auto;
  }
}

.thanks-message {
  line-height: 2;
}

